Fix some typos in the book -> .tex file

--- a/LibroMatematicasDiscretas.tex
+++ b/LibroMatematicasDiscretas.tex
@@ -477,7 +477,7 @@
     Hola... ¡Hey! Seguramente te estarás preguntando
     ¿Qué demonios estoy leyendo?
 
-    Bueno, este pequeño texto intenta darle solución a esa pregunta, la respuesta mas inmediata es
+    Bueno, este pequeño texto intenta darle solución a esa pregunta, la respuesta más inmediata es
     que este texto (o compilado como nos gusta decirle) es una recopilación de teoremas, ideas
     y conceptos importantes que aprendí a lo largo del tiempo sobre este tema.
 
@@ -1816,7 +1816,7 @@
                 \begin{itemize}
                     \item $A \subseteq A$
                     \item Si $A = B$, entonces $A \subseteq B$
-                    \item Todos los conjuntos son subconjuntos de conjunto universo $U$
+                    \item Todos los conjuntos son subconjuntos del conjunto universo $U$
                     \item $\emptyset \subseteq A$
                     \item Si $A \subseteq B$ y $B \subseteq C$ entonces $A \subseteq C$
                     \item $(A \cap C) \subseteq (B \cap C)$
@@ -1982,7 +1982,7 @@
         \clearpage
         \section{Complemento}
 
-            Todo lo que no seas tu, así que veamos que representa el complemento cuando estemos
+            Todo lo que no seas tú, así que veamos que representa el complemento cuando estemos
             hablando de conjuntos.
             \begin{equation*}
                 A^C = \overline A = \{ x \in U \Such x \notin A \}
@@ -2133,7 +2133,7 @@
         \clearpage
         \section{Producto Cartesiano}
 
-            Esta es la base de lo que se conoce como es plano cartesiano, y es quizá
+            Esta es la base de lo que se conoce como el plano cartesiano, y es quizá
             la operación mas útil que vas a conocer a lo largo de estos textos,
             veamos específicamente porque:
 
@@ -2143,7 +2143,7 @@
             % ====================================
             \subsection{N-Tuplas y Pares Ordenados}
 
-                El resultado de un producto cartesiano es un conjunto formado de n-tuplas,
+                El resultado de un producto cartesiano es un conjunto formado por n-tuplas,
                 cada n-tuplas es una agrupación ordenada de elementos.
                 Por ejemplo $(a,b)$ ó $(x,y,z)$.
 
@@ -2428,7 +2428,7 @@
             elementos ó entes que contiene cierto conjunto.
 
             Puedes verlo como una función que recibe un conjunto cualquiera y te regresa
-            un número \emph{(Bueno, tecnicamente también sta el caso en el que la cardinalidad es infinita)}.
+            un número \emph{(Bueno, tecnicamente también está el caso en el que la cardinalidad es infinita)}.
 
             Esta es la forma en que solemos expresar la cardinalidad de un conjunto cualquiera:
             \begin{equation}   
