Errata def. inferencia logica

--- a/LibroMatematicasDiscretas.tex
+++ b/LibroMatematicasDiscretas.tex
@@ -996,7 +996,7 @@
             \subsubsection{Definición}
 
                 Podemos entonces definir que una inferencia lógica es un proposición $q$ que si le aplicamos
-                el condicional con la disyunción de todas las premisas sería una tautología.
+                el condicional con la conjunción de todas las premisas sería una tautología.
 
                 Es decir:
                 \begin{equation*}
